# nodebot1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.sh
cad/: ld06_mount.FCStd  ld06_mount.stl
config/: view_bot.rviz
description/: camera.xacro  chassis.xacro  drive_unit.xacro  gazebo_control.xacro  nodebot1.urdf.xacro  pan_tilt_cam.xacro  pi_box.xacro  rcw0001_sensor.xacro  vltg_box.xacro
documentation/: hardware.md
launch/: cam_control.launch.py  gamepad_sim.launch.py  jspg.launch.py  ld06_control.launch.py  micro-ros-agent.launch.py  robot.launch.py  rsp.launch.py  rviz.launch.py  sim.launch.py  view.launch.py
scripts/: control_py
src/: control.cpp
